--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
+*
+{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.active
+{
+  color:red;
+}
+ul
+{
+  display: flex;
+  list-style: none;
+}
+li
+{
+  margin: 2px;
+}
+.menu
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin: 10px;
+}
+.menu_logo
+{
+  text-transform: uppercase;
+}
+.menu
+{
+  text-transform: uppercase;
 }
